updated a toList